Fix critical issue: Add missing Docker infrastructure files
- Include Dockerfile, docker-compose.yml, .dockerignore in repository
- Update .gitignore to include Docker files (commented out previous exclusions)
- Resolves critical workflow failure - Docker files now available for testing

Addresses Claude Code review critical issue: Missing Docker Infrastructure

--- a/.gitignore
+++ b/.gitignore
@@ -50,9 +50,9 @@ __tests__/
 jest.config.js
 
 # Docker (optional - comment out if you want to include Docker files)
-Dockerfile
-docker-compose.yml
-.dockerignore
+# Dockerfile
+# docker-compose.yml
+# .dockerignore
 
 # Windows installer (keep the shell script, ignore PowerShell for now)
 install.ps1
