docs: implement PR review suggestions for issue templates
- Added Browser field to bug report template for web-related issues
- Added explanation and examples for Acceptance Criteria in feature requests
- Added comment explaining blank_issues_enabled setting in config.yml
- Added 'area: core' label example to development workflow
- Updated test commands with descriptive comments
- Added Review Date field for documentation maintenance scheduling

These minor improvements enhance clarity and usability based on Claude's review feedback.

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,3 +1,5 @@
+# Disable blank issues to ensure users select an appropriate template
+# This helps maintain consistent issue quality and structure
 blank_issues_enabled: false
 contact_links:
   - name: "\ud83d\udcac Community Discussions"
