chore: implement final PR review suggestions
- Enhanced error handling in verify-badges.sh with specific error messages
- Added timeout parameters to all curl commands (5s connect, 10s total)
- Documented why all badges link to same workflow (matrix strategy)
- Improved error messages for better debugging

Changes address all three minor suggestions:
1. ✓ Script error handling - Added helpful context for non-200 responses
2. ✓ Badge URL consistency - Documented matrix build approach
3. ✓ Workflow enhancement - Added curl timeouts for reliability

--- a/.github/workflows/verify-badges.yml.example
+++ b/.github/workflows/verify-badges.yml.example
@@ -57,11 +57,12 @@ jobs:
           urls=$(grep -oE "https://img.shields.io/badge/[^)]*" README.md | head -3)
           
           for url in $urls; do
-            response=$(curl -s -o /dev/null -w "%{http_code}" "$url")
+            response=$(curl -s -o /dev/null -w "%{http_code}" --max-time 10 --connect-timeout 5 "$url")
             if [ "$response" = "200" ]; then
               echo "✓ Badge image accessible: ${url:0:50}..."
             else
               echo "❌ Badge image failed (HTTP $response): $url"
+              echo "   Timeout settings: 5s connect, 10s total"
               exit 1
             fi
           done
