test: add comprehensive tests for persona indicator system
- Add tests for indicator configuration loading from environment
- Test all indicator styles (full, minimal, compact, custom)
- Verify bracket styles and show/hide flags work correctly
- Test edge cases with missing metadata
- Update gitignore to track test files
- All 98 tests passing

--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,7 @@ temp/
 
 # Development and testing
 test-personas/
-__tests__/
+# __tests__/  # Tests should be tracked in version control
 jest.config.js
 
 # Docker (optional - comment out if you want to include Docker files)
