feat: Implement integration test framework foundation
- Created integration test structure with dedicated config
- Added test helpers for server initialization and file operations
- Implemented persona lifecycle integration tests
- Set up global setup/teardown for test environment
- Added test fixtures for personas and GitHub responses
- Configured Jest for ES modules compatibility
- Added npm scripts for running integration tests
- Created comprehensive test plan documentation

Integration tests verify:
- Persona loading from file system
- Persona creation and persistence
- Persona activation/deactivation
- Persona editing with file updates
- Error handling and recovery
- Concurrent operations

11 tests implemented (5 passing, 6 need fixes)

Part of Issue #51

--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,11 @@ Thumbs.db
 
 # Test coverage
 coverage/
+coverage-integration/
 *.lcov
+
+# Integration test temporary files
+.test-tmp/
 
 # Logs
 logs/
