--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --watchAll=false"
+    "test:ci": "jest --ci --coverage --watchAll=false",
+    "test:integration": "jest --config jest.integration.config.cjs",
+    "test:integration:watch": "jest --config jest.integration.config.cjs --watch",
+    "test:integration:coverage": "jest --config jest.integration.config.cjs --coverage",
+    "test:all": "npm test && npm run test:integration",
+    "test:all:coverage": "npm run test:coverage && npm run test:integration:coverage"
   },
   "keywords": [
     "mcp",
