fix: Resolve ESM module issues in Jest configuration
- Updated jest.config.cjs to use ts-jest/presets/default-esm preset
- Added proper ESM configuration with useESM: true in globals
- Updated transformIgnorePatterns to include both @modelcontextprotocol and zod
- Added NODE_OPTIONS='--experimental-vm-modules --no-warnings' to all test scripts
- Added ts-node ESM configuration to tsconfig.json

This fixes the 'Cannot use import statement outside a module' error that was
preventing GitHubClient tests from running. The tests now pass successfully.

Note: Some other tests may need updates due to the ESM configuration change.

--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "update:pull": "git pull origin main && npm install && npm run build",
     "update:backup": "cp -r . .backup-$(date +%s)",
     "update:restore": "echo 'Use rollback_update MCP tool for interactive rollback'",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --watchAll=false",
+    "test": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest",
+    "test:watch": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --watch",
+    "test:coverage": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --coverage",
+    "test:ci": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --ci --coverage --watchAll=false",
     "test:integration": "jest --config jest.integration.config.cjs",
     "test:integration:watch": "jest --config jest.integration.config.cjs --watch",
     "test:integration:coverage": "jest --config jest.integration.config.cjs --coverage",
