--- a/.github/workflows/core-build-test.yml
+++ b/.github/workflows/core-build-test.yml
@@ -37,23 +37,37 @@ jobs:
           cache: 'npm'
           cache-dependency-path: package-lock.json
 
-      - name: Cache TypeScript build
-        uses: actions/cache@v4
-        with:
-          path: |
-            dist/
-            build/
-            *.tsbuildinfo
-          key: typescript-build-${{ runner.os }}-${{ matrix.node-version }}-${{ hashFiles('src/**/*.ts', 'tsconfig*.json', 'package.json', 'package-lock.json') }}
-          restore-keys: |
-            typescript-build-${{ runner.os }}-${{ matrix.node-version }}-
-            typescript-build-${{ runner.os }}-
+      # Temporarily disabled TypeScript cache to debug CI issues
+      # - name: Cache TypeScript build
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: |
+      #       dist/
+      #       build/
+      #       *.tsbuildinfo
+      #     key: typescript-build-${{ runner.os }}-${{ matrix.node-version }}-${{ hashFiles('src/**/*.ts', 'tsconfig*.json', 'package.json', 'package-lock.json') }}
+      #     restore-keys: |
+      #       typescript-build-${{ runner.os }}-${{ matrix.node-version }}-
+      #       typescript-build-${{ runner.os }}-
 
       - name: Install dependencies
         run: npm ci
 
       - name: Build project
         run: npm run build
+
+      - name: Debug file structure
+        run: |
+          echo "=== Current directory ==="
+          pwd
+          echo "=== Source files ==="
+          ls -la src/update/ || echo "src/update not found"
+          echo "=== Config files ==="
+          ls -la src/config/ || echo "src/config not found"
+          echo "=== Dist files ==="
+          ls -la dist/update/ || echo "dist/update not found"
+          echo "=== Test files ==="
+          ls -la __tests__/unit/auto-update/ || echo "auto-update tests not found"
 
       - name: Cache Jest
         uses: actions/cache@v4
