Fix Jest rootDir configuration for CI environments
- Add explicit rootDir configuration to jest.config.cjs
- Use relative paths instead of <rootDir> tokens
- Add root files debug output to CI workflow

--- a/.github/workflows/core-build-test.yml
+++ b/.github/workflows/core-build-test.yml
@@ -60,6 +60,8 @@ jobs:
         run: |
           echo "=== Current directory ==="
           pwd
+          echo "=== Root files ==="
+          ls -la jest.* || echo "No jest files found"
           echo "=== Source files ==="
           ls -la src/update/ || echo "src/update not found"
           echo "=== Config files ==="
