Add explanatory comments for shell: bash directives
Per review feedback, added comments explaining why we use 'shell: bash' for cross-platform compatibility. This helps future contributors understand the requirement.

--- a/.github/workflows/docker-testing.yml
+++ b/.github/workflows/docker-testing.yml
@@ -49,6 +49,7 @@ jobs:
             docker-buildx-${{ runner.os }}-
 
       - name: Build Docker image (builder stage)
+        # Use bash for cross-platform compatibility (Windows/macOS/Linux)
         shell: bash
         run: |
           echo "🔨 Building Docker image for ${{ matrix.platform }}..."
