--- a/.github/workflows/verify-badges.yml.example
+++ b/.github/workflows/verify-badges.yml.example
@@ -24,6 +24,7 @@ jobs:
         uses: actions/checkout@v4
         
       - name: Run badge verification
+        # Use bash for cross-platform compatibility (Windows/macOS/Linux)
         shell: bash
         run: |
           chmod +x scripts/verify-badges.sh
