Remove unsupported versioning-strategy from docker dependabot config.
Fix: Remove unsupported versioning-strategy from Docker Dependabot config

Description (optional for the extended body): Removed versioning-strategy: "increase" from the Docker package-ecosystem in .github/dependabot.yml since it is not supported for Docker updates. This resolves configuration errors and ensures Dependabot functions as expected for both npm and Docker.

This format follows best practices:

The title quickly explains the main fix.
The body (optional) provides context about the change and the problem it addresses.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,6 @@
 
 version: 2
 updates:
-  # Monitor npm dependencies (TypeScript/JavaScript)
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
@@ -21,7 +20,7 @@ updates:
       - "automated"
       - "npm"
     versioning-strategy: "increase"
-    
+
   # Monitor Docker base images and dependencies  
   - package-ecosystem: "docker"
     directory: "/"
@@ -37,4 +36,4 @@ updates:
       - "dependencies"
       - "automated"
       - "docker"
-    versioning-strategy: "increase"
+    # versioning-strategy removed for docker
