Fix CI test failures and workflow validation
1. Fix persona version type issue in integration tests
   - YAML parses '1.1' as float, not string
   - Updated tests to convert to string before comparison

2. Add bash shell to security-audit.yml steps
   - Required for GITHUB_ENV variable usage
   - Required for heredoc syntax with cat command
   - Fixes workflow validation test

3. Security audit improvements
   - Reduced false positives from 1253 to a reasonable number
   - All SecurityAuditor tests now pass (12/12)

--- a/.github/workflows/security-audit.yml
+++ b/.github/workflows/security-audit.yml
@@ -41,6 +41,7 @@ jobs:
 
       - name: Run Security Audit
         id: security-audit
+        shell: bash
         run: |
           # Create security audit script
           cat > run-audit.js << 'EOF'
@@ -91,6 +92,7 @@ jobs:
 
       - name: Generate SARIF report
         if: always()
+        shell: bash
         run: |
           # Convert our JSON report to SARIF format
           cat > convert-to-sarif.js << 'EOF'
@@ -241,6 +243,7 @@ jobs:
 
       - name: Fail if critical issues found
         if: env.AUDIT_FAILED == 'true'
+        shell: bash
         run: |
           echo "❌ Security audit found critical issues. Please review the report above."
           exit 1
