--- a/.github/workflows/security-audit.yml
+++ b/.github/workflows/security-audit.yml
@@ -96,10 +96,10 @@ jobs:
         run: |
           # Convert our JSON report to SARIF format
           cat > convert-to-sarif.js << 'EOF'
-          const fs = require('fs/promises');
+          import { readFile, writeFile } from 'fs/promises';
           
           async function convertToSarif() {
-            const result = JSON.parse(await fs.readFile('security-audit-result.json', 'utf-8'));
+            const result = JSON.parse(await readFile('security-audit-result.json', 'utf-8'));
             
             const sarif = {
               version: '2.1.0',
@@ -132,7 +132,7 @@ jobs:
               }]
             };
             
-            await fs.writeFile('security-audit.sarif', JSON.stringify(sarif, null, 2));
+            await writeFile('security-audit.sarif', JSON.stringify(sarif, null, 2));
           }
           
           function mapSeverityToLevel(severity) {
