fix: Include default personas in npm package
This fixes issue #369 where new installations had no content because
the data/personas directory wasn't included in the npm package.

## Changes
- Added 'data/personas/**/*.md' to package.json files field
- This includes 5 default personas:
  - business-consultant.md
  - creative-writer.md
  - debug-detective.md
  - eli5-explainer.md
  - technical-analyst.md

## Testing
Verified with 'npm pack --dry-run' that all persona files are included
in the package.

## Impact
New users will now have default content immediately after installation,
providing a much better first experience.

Fixes #369

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "dist/**/*.js",
     "dist/**/*.d.ts",
     "dist/**/*.d.ts.map",
+    "data/personas/**/*.md",
     "!dist/__tests__/**",
     "!dist/**/*.test.*",
     "README.md",
