test: Enable Level 1 Docker test and minimal compose test
Based on initial results:
- Level 0 (basic test) passed in 9 seconds ✅
- Docker Build tests passed (AMD64 2min, ARM64 7.5min) ✅
- Docker Compose hanging after 8+ minutes 🔴

Changes:
- Enable Level 1: Simple docker run alpine echo test
- Enable Level 4: Minimal compose test with debug file
- Add step-level timeouts to prevent hanging
- Add timing output for better diagnostics

This will help isolate whether:
1. Simple Docker works (Level 1)
2. Docker Compose itself is the issue (Level 4 with minimal config)

--- a/.github/workflows/docker-debug.yml
+++ b/.github/workflows/docker-debug.yml
@@ -26,13 +26,17 @@ jobs:
           echo "Available space: $(df -h /)"
           echo "Memory: $(free -h)"
 
-  # Level 1: Simple Docker Test (COMMENTED - uncomment to test)
-  # simple-docker:
-  #   runs-on: ubuntu-latest
-  #   timeout-minutes: 5
-  #   steps:
-  #     - name: Docker hello world
-  #       run: docker run --rm alpine:latest echo "Docker works at $(date)"
+  # Level 1: Simple Docker Test (ACTIVE - testing Docker functionality)
+  simple-docker:
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    steps:
+      - name: Docker hello world
+        timeout-minutes: 2
+        run: |
+          echo "Testing Docker at $(date)"
+          docker run --rm alpine:latest echo "Docker works!"
+          echo "Docker test completed at $(date)"
   
   # Level 2: Docker Build Test (COMMENTED - uncomment to test)
   # docker-build:
@@ -63,15 +67,19 @@ jobs:
   #         docker build -f Dockerfile -t mcp-server-test ..
   #         echo "Build completed successfully"
 
-  # Level 4: Full Docker Compose Test (COMMENTED - uncomment to test)  
-  # docker-compose:
-  #   runs-on: ubuntu-latest
-  #   timeout-minutes: 10
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v4
-  #       
-  #     - name: Docker Compose test
-  #       run: |
-  #         cd docker
-  #         docker compose up --build --exit-code-from app
+  # Level 4: Docker Compose Debug Test (ACTIVE - testing with minimal compose)  
+  docker-compose-debug:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        
+      - name: Test minimal Docker Compose
+        timeout-minutes: 3
+        run: |
+          echo "Starting Docker Compose test at $(date)"
+          cd docker
+          # Test with our debug compose file that has simpler services
+          docker compose -f docker-compose.debug.yml run --rm level1-echo
+          echo "Docker Compose test completed at $(date)"
