fix: Force Jest to exit and detect open handles
Added Jest flags to prevent hanging:
- --forceExit: Forces Jest to exit after tests complete
- --detectOpenHandles: Shows what's keeping Jest from exiting

Also switched CI to use 'npm run test:ci' instead of 'npm test' which:
- Uses --ci flag for CI environment
- Disables watch mode with --watchAll=false
- Includes coverage reporting

This should prevent tests from hanging due to:
- Open file handles
- Unresolved promises
- Active timers/intervals
- Network connections

--- a/.github/workflows/core-build-test.yml
+++ b/.github/workflows/core-build-test.yml
@@ -135,7 +135,7 @@ jobs:
 
       - name: Run test suite (original method)
         id: original_tests
-        run: npm test
+        run: npm run test:ci
         continue-on-error: true
 
       - name: Debug failed tests environment
