fix: Remove NODE_OPTIONS conflict in test scripts
The CI workflow sets NODE_OPTIONS globally with memory settings:
  NODE_OPTIONS='--max-old-space-size=4096 --experimental-vm-modules'

But the test scripts were overwriting this with cross-env:
  NODE_OPTIONS='--experimental-vm-modules --no-warnings'

This was causing the tests to lose the 4GB memory allocation,
potentially causing them to hang or crash.

Fixed by:
- Removing cross-env NODE_OPTIONS from test scripts
- Let CI workflow's NODE_OPTIONS take precedence
- Added test:local script for local development with NODE_OPTIONS

This should resolve the hanging tests by ensuring they have
enough memory to run.

--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "build:readme:github": "node scripts/build-readme.js --target=github",
     "prepublishOnly": "npm run build:readme:npm && cp README.md README.md.backup 2>/dev/null || true && cp README.npm.md README.md && BUILD_TYPE=npm npm run build",
     "postpublish": "if [ -f README.md.backup ]; then mv README.md.backup README.md; else echo 'No backup found, README.md unchanged'; fi",
-    "test": "cross-env \"NODE_OPTIONS=--experimental-vm-modules --no-warnings\" jest --config test/jest.config.cjs --forceExit --detectOpenHandles",
-    "test:watch": "cross-env \"NODE_OPTIONS=--experimental-vm-modules --no-warnings\" jest --config test/jest.config.cjs --watch",
-    "test:coverage": "cross-env \"NODE_OPTIONS=--experimental-vm-modules --no-warnings\" jest --config test/jest.config.cjs --coverage",
-    "test:ci": "cross-env \"NODE_OPTIONS=--experimental-vm-modules --no-warnings\" jest --config test/jest.config.cjs --ci --coverage --watchAll=false --forceExit --detectOpenHandles",
+    "test": "jest --config test/jest.config.cjs --forceExit --detectOpenHandles",
+    "test:local": "cross-env \"NODE_OPTIONS=--experimental-vm-modules --no-warnings\" jest --config test/jest.config.cjs",
+    "test:watch": "jest --config test/jest.config.cjs --watch",
+    "test:coverage": "jest --config test/jest.config.cjs --coverage",
+    "test:ci": "jest --config test/jest.config.cjs --ci --coverage --watchAll=false --forceExit --detectOpenHandles",
     "build:test": "tsc -p test/tsconfig.test.json",
     "test:compiled": "npm run build:test && cross-env NODE_OPTIONS='--experimental-vm-modules' jest --config test/jest.config.compiled.cjs",
     "test:compiled:ci": "npm run build:test && cross-env NODE_OPTIONS='--experimental-vm-modules' jest --config test/jest.config.compiled.cjs --ci --watchAll=false",
