fix: Resolve Extended Node Compatibility test failures
- Skip PersonaSharer rate limiting test since export_persona tools were disabled
  - PersonaSharer module no longer exists after removing export functionality
  - Rate limiting is still tested thoroughly in other test cases

- Add missing bash shell directive to release-npm.yml workflow
  - Build README files step uses bash syntax (if statements, stat command)
  - Required for cross-platform compatibility in GitHub Actions

Both test suites now pass successfully across all Node versions and platforms.

--- a/.github/workflows/release-npm.yml
+++ b/.github/workflows/release-npm.yml
@@ -104,6 +104,7 @@ jobs:
           echo "✅ Changelog generated successfully"
 
       - name: Build README files
+        shell: bash
         run: |
           echo "📚 Building modular README files for NPM..."
           npm run build:readme
